Navigation v.2 + max page overflow bug fix

--- a/src/app/radiostream/radiostream.component.scss
+++ b/src/app/radiostream/radiostream.component.scss
@@ -3,11 +3,9 @@
   // float: left;
   font-family: 'Josefin Sans';
 //box-shadow: 0px 0px 21px 0px rgba(255,255,255,0.2);
-background-color: #000;
   padding: 7px;
   width: 100%;
-  height: 48px;
-  border-bottom: 1px solid #ffdf00;
+  height: 52px;
 }
 
 .on-air h1 {
@@ -19,7 +17,7 @@ background-color: #000;
   color: #fff;
   font-size: 0.75em;
   font-weight: 900;
-
+font-family: "Orbitron", monospace;
 
 }
 
@@ -39,12 +37,11 @@ animation: live 1s infinite;
   z-index: 9;
   cursor: pointer;
   float:left;
-  width: 48px;
-  margin-right: 0;
   margin-bottom:7px;
   margin-top: 7px;
   font-size: 1.333em;
-  margin-left: 28px;
+  margin-left: 21px;
+  margin-right: 14px;
 
 }
 
@@ -92,8 +89,13 @@ display: inline-block;
 
 .video-stream {
   display: inline-block;
-  float: right;
-  margin-top: 4px;
+  float: left;
+  margin-top: 2px;
+  margin-left: 14px;
+  padding: 0px 7px;
+    border-left: 1px solid #ffdf00;
+  border-right: 1px solid #ffdf00;
+  position: relative;
 }
 
 .video-stream h1 {
@@ -105,11 +107,33 @@ display: inline-block;
   color: #fff;
 }
 
+.video-stream h1 {
+  color: #fff;
+  padding: 2px 14px;
+  border-radius: 4px;
+    font-size: 1.5em;
+    margin-top: 3px;
+}
+
+.video-stream span {
+  background-color: #ffdf00;
+  font-size: 0.333em;
+  text-align: center;
+  color: #000;
+  padding: 0px;
+  top: 2px;
+  left: 12px;
+  padding-top: 2px;
+  width: 18px;
+  padding-bottom: 2px;
+  position: absolute;
+  font-weight: 700;
+}
+
 .see-schedule h1 {
 
   cursor: pointer;
   color: #fff;
-  margin-right: 14px;
   padding: 5px 14px;
   border-radius: 4px;
   font-size: 0.75em;
@@ -119,41 +143,31 @@ box-shadow: inset 20px 20px 60px #2b2b2b,
 border: 1px solid #fff;
 }
 
-.video-stream h1 {
-  color: #fff;
-  margin-right: 14px;
-  padding: 5px 14px;
-  border-radius: 4px;
-    font-size: 0.75em;
-    background: #000;
-    box-shadow: inset 20px 20px 60px #2b2b2b,
-                inset -20px -20px 60px #3b3b3b;
-                border: 1px solid #fff;
-}
+
 
 
 @media (max-width: 990px) {
-.radiostream-buttons-container {
-    background-color: #ffdf00;
-    overflow-y: hidden;
-    height: 48px;
-    margin-top: 7px;
-}
+// .radiostream-buttons-container {
+//     background-color: #ffdf00;
+//     overflow-y: hidden;
+//     height: 48px;
+//     margin-top: 7px;
+// }
 
-.livestream-play-button {
-
-  width: 36px;
-  margin-left: 11px;
-
-}
+// .livestream-play-button {
+//
+//   width: 36px;
+//   margin-left: 11px;
+//
+// }
 
 .see-schedule {
   float: left;
 }
 
-.video-stream {
-  float: left;
-}
+// .video-stream {
+//   float: left;
+// }
 
 .see-schedule h1 {
 
@@ -170,24 +184,24 @@ box-shadow:  20px 20px 60px #d9be00,
              -20px -20px 60px #ffff00;
 }
 
-.video-stream { width: 100%;}
+// .video-stream { width: 100%;}
 
-.video-stream h1 {
-
-        width: 100%;
-        text-align: center;
-         border: 1px solid #000;
-        margin-top: 0px;
-        margin-right: 4px;
-        float: left;
-        line-height: 30px;
-        border-radius: 0px;
-        color: #000;
-        vertical-align: middle;
-
-          height: 40px;
-background: #ffdf00;
-box-shadow:  20px 20px 60px #d9be00,
-             -20px -20px 60px #ffff00;
-}
+// .video-stream h1 {
+//
+//         width: 100%;
+//         text-align: center;
+//          border: 1px solid #000;
+//         margin-top: 0px;
+//         margin-right: 4px;
+//         float: left;
+//         line-height: 30px;
+//         border-radius: 0px;
+//         color: #000;
+//         vertical-align: middle;
+//
+//           height: 40px;
+// background: #ffdf00;
+// box-shadow:  20px 20px 60px #d9be00,
+//              -20px -20px 60px #ffff00;
+// }
 }
